fixed overflowing navbar

--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,13 @@
   min-height: 100vh;
   color: var(--dark-mode-text);
   position: relative;
+  transition: width 150ms ease-in;
 }
 
 .sidebar a {
   text-decoration: none;
   color: var(--dark-mode-text);
+  white-space: nowrap;
 }
 
 .sidebar .logo {
@@ -41,8 +43,13 @@
   height: 2.3rem;
 }
 
+.logo .small {
+  display: none;
+}
+
 .closed.sidebar {
   width: 70px;
+  transition: width 150ms ease-in;
 }
 
 .closedDeets {
@@ -57,13 +64,15 @@
   display: flex;
   height: 100%;
   background-color: var(--dark-mode-bg);
+  min-height: 100vh;
 }
 
-.deets {
+.sidebar .deets {
   display: flex;
   flex-direction: column;
   padding: 2rem 3rem;
   gap: 3rem;
+  max-width: auto;
 }
 
 .closed.sidebar .closedDeets {
@@ -93,8 +102,9 @@
   position: relative;
 }
 
-.closed.sidebar .closedDeets ul li a span {
-  background-color: rgb(38, 43, 60);
+.closed.sidebar .closedDeets ul li a:hover {
+  background-color: #262b3c;
+  color: var(--dark-mode-gray-700);
 }
 
 .closed.sidebar .closedDeets ul li a:hover .content {
@@ -110,6 +120,8 @@
 
 .closed.sidebar .closedDeets .content {
   display: none;
+  background-color: #262b3c;
+  color: var(--dark-mode-gray-700);
 }
 
 ul {
@@ -170,6 +182,10 @@ ul {
 
 .Navbar svg {
   cursor: pointer;
+}
+
+.search {
+  display: none;
 }
 
 .left form {
@@ -275,4 +291,53 @@ ul {
   border-radius: 50%;
   object-fit: cover;
   object-position: center;
+}
+
+@media screen and (max-width: 768px) {
+  .sidebar {
+    position: absolute;
+    top: 0;
+    left: -30rem;
+    width: 7rem;
+  }
+
+  .closed.sidebar {
+    left: 0;
+    position: relative;
+  }
+
+  .sidebar .logo img {
+    display: none !important;
+  }
+
+  .sidebar .logo img.small {
+    display: block !important;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .sidebar {
+    position: absolute;
+    top: 0;
+    left: -30rem;
+    width: 7rem;
+  }
+
+  .closed.sidebar {
+    left: 0;
+    position: absolute;
+  }
+
+  .user span,
+  .user svg {
+    display: none;
+  }
+
+  .left form {
+    display: none;
+  }
+
+  .search {
+    display: block;
+  }
 }
